refactor: extract profiler daemon and socket handling logic into internal modules